<resources>
    <string name="app_name">ReflexChecker</string>
    <string name="instruction">After you press the Start button you are
        presented with two tasks and a scrollable
        view that contains alternating images and checkboxes. When finished the tasks,
        click the Done button.</string>
    <string name="start">START</string>
    <string name="task_1">Task 1:</string>
    <string name="task_2">Task 2:</string>
    <string name="image_spacer">Image_Spacer</string>
    <string name="drink">Drink</string>
    <string name="food">Food</string>
    <string name="snack">Snack</string>
    <string name="other">Something else</string>
    <string name="done">Done</string>
    <string-array name="task1_descriptions">
        <item>Select all drinks</item>
        <item>Deselect all drinks</item>
        <item>Select one drink</item>
    </string-array>
    <string-array name="task2_descriptions">
        <item>Select all fruits</item>
        <item>Deselect all fruits</item>
        <item>Select one fruit</item>
    </string-array>
    <string-array name="fruits">
        <item>Orange</item>
        <item>Mango</item>
        <item>Strawberry</item>
    </string-array>
    <string-array name="foods">
        <item>Burger</item>
        <item>Sandwich</item>
        <item>Salad</item>
    </string-array>
    <string-array name="drinks">
        <item>Beer</item>
        <item>Coke</item>
        <item>Juice</item>
    </string-array>
</resources>
